Created jm.png; Edited settings and Form1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -4,5 +4,6 @@ unique_ids:
   modules: {}
   server_modules: {}
   assets:
+    jm.png: '1701492491340449901470919.4704'
     standard-page.html: 6Q5BEHTTJKKP2FTHOQOFCF43AKS7HABJ
     theme.css: LS4YARM5SHNLK63FSLVTCHSNPRKPP2FX
