--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,9 +1,25 @@
+dependencies: []
+services:
+- source: /runtime/services/tables.yml
+  client_config: {}
+  server_config: {}
+package_name: jagdamba_minerals
 allow_embedding: false
-package_name: M3_App_1
-name: M3 App 1
-startup_form: Form1
-renamed: true
+name: jagdamba minerals
 runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox,
   server_spec: null}
-dependencies: []
-services: []
+metadata: {title: sign up to work with jagdamba minerals, description: join with jagdamba minerals,
+  logo_img: 'asset:jm.png'}
+startup_form: Form1
+db_schema:
+  table_1:
+    client: none
+    server: full
+    columns: []
+    title: Table 1
+  table_2:
+    client: none
+    server: full
+    columns: []
+    title: Table 2
+renamed: true
