--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -1,86 +1,3 @@
+container: {type: ColumnPanel}
+components: []
 is_package: true
-container:
-  type: HtmlTemplate
-  properties: {html: '@theme:standard-page.html', visible: true}
-components:
-- type: ColumnPanel
-  properties: {col_widths: '{}'}
-  name: content_panel
-  layout_properties: {slot: default}
-  components:
-  - name: label_7
-    properties: {text: JOIN WITH JAGDAMBA MINERALS, align: center, bold: true, font_size: 20}
-    type: Label
-    layout_properties: {grid_position: 'GGXFKF,MDHVGR'}
-  - name: meeee
-    properties: {text: 'ENTER YOUR NAME
-
-        ', bold: true, align: left, font_size: 20, icon: '', spacing_above: none,
-      spacing_below: none}
-    type: Label
-    layout_properties: {grid_position: 'VQNZSF,YLWIRN'}
-    data_bindings:
-    - {property: icon, code: '', writeback: false}
-  - name: text_box_1
-    properties: {text: YOUR NAME, spacing_above: none, spacing_below: none}
-    type: TextBox
-    layout_properties: {grid_position: 'DAOLVQ,WKLZDX'}
-  - name: label_1
-    properties: {text: ENTER YOUR COMPANY NAME, bold: true, font_size: 20}
-    type: Label
-    layout_properties: {grid_position: 'FSNFAZ,OBQTRE'}
-    data_bindings: []
-  - name: text_box_2
-    properties: {text: COMPANY NAME}
-    type: TextBox
-    layout_properties: {grid_position: 'HSLPBQ,GUUHMP'}
-  - name: label_6
-    properties: {text: ENTER COMPANY ADDRESS, bold: true, font_size: 20}
-    type: Label
-    layout_properties: {grid_position: 'OXNVCN,YPELDK'}
-  - name: text_box_5
-    properties: {text: ENTER ADDRESS}
-    type: TextBox
-    layout_properties: {grid_position: 'CTZDCQ,JLPEFI'}
-  - name: label_2
-    properties: {text: MOBILE NUMBER, bold: true, spacing_above: none, spacing_below: none,
-      font_size: 20}
-    type: Label
-    layout_properties: {grid_position: 'AGDHQG,EKKVSY'}
-  - name: text_box_3
-    properties: {text: ENTER NUMBER}
-    type: TextBox
-    layout_properties: {grid_position: 'PFXDJC,CENJMM'}
-  - name: label_3
-    properties: {text: EMAIL ID, bold: true, font_size: 20}
-    type: Label
-    layout_properties: {grid_position: 'WIMHDO,ECLASO'}
-  - name: text_box_4
-    properties: {text: ENTER EMAIL ID, placeholder: '', visible: true, hide_text: false}
-    type: TextBox
-    layout_properties: {grid_position: 'KHJIEF,MUOKHC'}
-  - name: label_5
-    properties: {text: YOUR REQUIREMENT, font_size: 20, bold: true}
-    type: Label
-    layout_properties: {grid_position: 'SYVMDH,GQLAPT'}
-  - name: check_box_1
-    properties: {text: FELSPAR, bold: true}
-    type: CheckBox
-    layout_properties: {grid_position: 'AUCSYD,ZGUWMV'}
-  - name: check_box_2
-    properties: {text: QUARTZ, bold: true}
-    type: CheckBox
-    layout_properties: {grid_position: 'BPBUFB,DXOIVF'}
-  - name: button_1
-    properties: {text: SUBMIT, align: left, bold: true, font_size: 20, background: 'theme:On
-        Tertiary Container', foreground: 'theme:Primary', role: outlined-button}
-    type: Button
-    layout_properties: {grid_position: 'VNINDJ,XNTCCR'}
-- name: label_4
-  properties: {text: JAGDAMBA MINERALS, bold: true, background: '', icon: ''}
-  type: Label
-  layout_properties: {slot: title}
-- name: link_1
-  properties: {text: HOME}
-  type: Link
-  layout_properties: {slot: nav-right}
