--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -2,7 +2,8 @@ unique_ids:
   forms:
     Form1: SFUUKRGW3HKUS2ORJMQ4BYT5HYLKGW6P
   modules: {}
-  server_modules: {}
+  server_modules:
+    ServerModule1: '1701495672028865630391198.5992'
   assets:
     jm.png: '1701492491340449901470919.4704'
     standard-page.html: 6Q5BEHTTJKKP2FTHOQOFCF43AKS7HABJ
